--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,26 +16,31 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/title_activity_main"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
         <activity android:name=".WelcomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"/>
-        <activity android:name=".SignUpActivity">
-        </activity>
-        <activity android:name=".SignInActivity">
+        <activity android:name=".SignUpActivity"></activity>
+        <activity android:name=".SignInActivity"></activity>
+        <activity android:name=".PatientProfileOneActivity"></activity>
+        <activity android:name=".PatientProfileTwoActivity"></activity>
+        <activity android:name=".PatientProfileView"/>
+
+
+
+
+        <activity android:name=".AdminPanel.AdminPanelMainActivity">
 
         </activity>
-        <activity android:name=".PatientProfileOneActivity">
-
-        </activity>
-        <activity android:name=".PatientProfileTwoActivity">
-
-        </activity>
-
+        <activity android:name=".AdminPanel.MultiplePatientValidityListViewActivity"/>
+        <activity android:name=".AdminPanel.MultiplePatientValidityActivity"/>
 
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
@@ -56,7 +61,9 @@
                 <data android:scheme="@string/fb_login_protocol_scheme" />
             </intent-filter>
         </activity>
-        <service android:name=".HelperClass.MyLocationService"/>
+
+        <service android:name=".HelperClass.MyLocationService" />
+
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
