--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
     implementation 'com.google.android.gms:play-services-location:17.0.0'
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
+    implementation 'com.google.android.libraries.places:places:2.0.0'
 
     ///My necessary dependencies
     implementation 'de.hdodenhof:circleimageview:3.0.0'
@@ -70,6 +71,5 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'pl.droidsonroids.gif:android-gif-drawable:1.2.17'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
-    //implementation 'com.theartofdev.edmodo:android-image-cropper:2.8.+'
 
 }
