--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,11 @@
 
 
         <activity android:name=".AccountPart.WelcomeActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity android:name=".AccountPart.EntranceActivity"/>
 
@@ -44,13 +48,9 @@
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".DoctorPart.EditDoctorProfileActivity" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
-        <activity android:name=".DoctorPart.EditDoctorSecureInfo"/>
+        <activity android:name=".DoctorPart.EditDoctorSecureInfoActivity"/>
 
         <activity android:name=".AdminPart.Example">
         </activity>
