--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,45 +16,39 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <meta-data android:name="com.google.android.geo.API_KEY"
-            android:value="@string/map_key"/>
-
-
-        <activity android:name=".AccountPart.WelcomeActivity">
+        <activity android:name=".DoctorPart.EditAppointmentSchedule">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AccountPart.EntranceActivity"/>
 
-        <activity android:name=".PatientPart.PatientMainActivity"
-            android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".PatientPart.EditPatientProfileActivity"/>
-        <activity android:name=".PatientPart.EditPatientSecureInfoActivity">
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/map_key" />
+
+        <activity android:name=".AccountPart.WelcomeActivity">
+
         </activity>
-
-
+        <activity android:name=".AccountPart.EntranceActivity" />
+        <activity
+            android:name=".PatientPart.PatientMainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".PatientPart.EditPatientProfileActivity" />
+        <activity android:name=".PatientPart.EditPatientSecureInfoActivity"></activity>
         <activity
             android:name=".AdminPart.AdminMainActivity"
             android:label="@string/title_activity_admin_main"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
-
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".DoctorPart.DoctorMainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".DoctorPart.EditDoctorProfileActivity" >
-
-        </activity>
-        <activity android:name=".DoctorPart.EditDoctorSecureInfoActivity"/>
-
-        <activity android:name=".AdminPart.Example">
-        </activity>
-
+        <activity android:name=".DoctorPart.EditDoctorProfileActivity"></activity>
+        <activity android:name=".DoctorPart.EditDoctorSecureInfoActivity" />
+        <activity android:name=".AdminPart.Example"></activity>
         <activity android:name=".MyGoogleMapClass.SearchHospitalOnMap" />
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
@@ -81,13 +75,15 @@
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.tarikulislamjoni95.doctorsappointment"
             android:exported="false"
             android:grantUriPermissions="true">
-            <meta-data android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/provider_paths"/>
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths" />
         </provider>
     </application>
 
